Wind Stats Date Querying

--- a/pandas_exercises-master/06_Stats/Wind_Stats/Exercises.ipynb
+++ b/pandas_exercises-master/06_Stats/Wind_Stats/Exercises.ipynb
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -321,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Needed datetime module\n",
@@ -352,15 +356,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.4 ms ± 636 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "37.1 ms ± 759 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "36.7 ms ± 351 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "37.1 ms ± 1.64 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -374,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +518,7 @@
        "6573  11.58  11.38  12.08  22.08  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +678,7 @@
        "4  10.34  12.92  11.83  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,11 +691,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1961-01-01\n",
+       "1      1961-01-02\n",
+       "2      1961-01-03\n",
+       "3      1961-01-04\n",
+       "4      1961-01-05\n",
+       "5      1961-01-06\n",
+       "6      1961-01-07\n",
+       "7      1961-01-08\n",
+       "8      1961-01-09\n",
+       "9      1961-01-10\n",
+       "10     1961-01-11\n",
+       "11     1961-01-12\n",
+       "12     1961-01-13\n",
+       "13     1961-01-14\n",
+       "14     1961-01-15\n",
+       "15     1961-01-16\n",
+       "16     1961-01-17\n",
+       "17     1961-01-18\n",
+       "18     1961-01-19\n",
+       "19     1961-01-20\n",
+       "20     1961-01-21\n",
+       "21     1961-01-22\n",
+       "22     1961-01-23\n",
+       "23     1961-01-24\n",
+       "24     1961-01-25\n",
+       "25     1961-01-26\n",
+       "26     1961-01-27\n",
+       "27     1961-01-28\n",
+       "28     1961-01-29\n",
+       "29     1961-01-30\n",
+       "          ...    \n",
+       "6544   1978-12-02\n",
+       "6545   1978-12-03\n",
+       "6546   1978-12-04\n",
+       "6547   1978-12-05\n",
+       "6548   1978-12-06\n",
+       "6549   1978-12-07\n",
+       "6550   1978-12-08\n",
+       "6551   1978-12-09\n",
+       "6552   1978-12-10\n",
+       "6553   1978-12-11\n",
+       "6554   1978-12-12\n",
+       "6555   1978-12-13\n",
+       "6556   1978-12-14\n",
+       "6557   1978-12-15\n",
+       "6558   1978-12-16\n",
+       "6559   1978-12-17\n",
+       "6560   1978-12-18\n",
+       "6561   1978-12-19\n",
+       "6562   1978-12-20\n",
+       "6563   1978-12-21\n",
+       "6564   1978-12-22\n",
+       "6565   1978-12-23\n",
+       "6566   1978-12-24\n",
+       "6567   1978-12-25\n",
+       "6568   1978-12-26\n",
+       "6569   1978-12-27\n",
+       "6570   1978-12-28\n",
+       "6571   1978-12-29\n",
+       "6572   1978-12-30\n",
+       "6573   1978-12-31\n",
+       "Name: Yr_Mo_Dy, Length: 6574, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Could have also done\n",
     "pd.to_datetime(data['Yr_Mo_Dy'])"
@@ -699,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +924,7 @@
        "1961-01-05  10.34  12.92  11.83  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +966,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -933,7 +1007,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1039,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1068,7 @@
        "10.227982360836924"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1287,7 @@
        "max      42.380000    42.540000  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1434,7 @@
        "MAL  42.54  0.67  6.699794  15.599079"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,12 +1463,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RPT</th>\n",
+       "      <th>VAL</th>\n",
+       "      <th>ROS</th>\n",
+       "      <th>KIL</th>\n",
+       "      <th>SHA</th>\n",
+       "      <th>BIR</th>\n",
+       "      <th>DUB</th>\n",
+       "      <th>CLA</th>\n",
+       "      <th>MUL</th>\n",
+       "      <th>CLO</th>\n",
+       "      <th>BEL</th>\n",
+       "      <th>MAL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yr_Mo_Dy</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1961-01-01</th>\n",
+       "      <td>15.04</td>\n",
+       "      <td>14.96</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>9.29</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.87</td>\n",
+       "      <td>13.67</td>\n",
+       "      <td>10.25</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>12.58</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>15.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-02</th>\n",
+       "      <td>14.71</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>12.62</td>\n",
+       "      <td>7.67</td>\n",
+       "      <td>11.50</td>\n",
+       "      <td>10.04</td>\n",
+       "      <td>9.79</td>\n",
+       "      <td>9.67</td>\n",
+       "      <td>17.54</td>\n",
+       "      <td>13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-03</th>\n",
+       "      <td>18.50</td>\n",
+       "      <td>16.88</td>\n",
+       "      <td>12.33</td>\n",
+       "      <td>10.13</td>\n",
+       "      <td>11.17</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>11.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>7.67</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>12.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-04</th>\n",
+       "      <td>10.58</td>\n",
+       "      <td>6.63</td>\n",
+       "      <td>11.75</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>8.63</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>5.83</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>5.46</td>\n",
+       "      <td>10.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-05</th>\n",
+       "      <td>13.33</td>\n",
+       "      <td>13.25</td>\n",
+       "      <td>11.42</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>10.71</td>\n",
+       "      <td>8.21</td>\n",
+       "      <td>11.92</td>\n",
+       "      <td>6.54</td>\n",
+       "      <td>10.92</td>\n",
+       "      <td>10.34</td>\n",
+       "      <td>12.92</td>\n",
+       "      <td>11.83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              RPT    VAL    ROS    KIL    SHA   BIR    DUB    CLA    MUL  \\\n",
+       "Yr_Mo_Dy                                                                   \n",
+       "1961-01-01  15.04  14.96  13.17   9.29    NaN  9.87  13.67  10.25  10.83   \n",
+       "1961-01-02  14.71    NaN  10.83   6.50  12.62  7.67  11.50  10.04   9.79   \n",
+       "1961-01-03  18.50  16.88  12.33  10.13  11.17  6.17  11.25    NaN   8.50   \n",
+       "1961-01-04  10.58   6.63  11.75   4.58   4.54  2.88   8.63   1.79   5.83   \n",
+       "1961-01-05  13.33  13.25  11.42   6.17  10.71  8.21  11.92   6.54  10.92   \n",
+       "\n",
+       "              CLO    BEL    MAL  \n",
+       "Yr_Mo_Dy                         \n",
+       "1961-01-01  12.58  18.50  15.04  \n",
+       "1961-01-02   9.67  17.54  13.83  \n",
+       "1961-01-03   7.67  12.75  12.71  \n",
+       "1961-01-04   5.88   5.46  10.88  \n",
+       "1961-01-05  10.34  12.92  11.83  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Max</th>\n",
+       "      <th>Min</th>\n",
+       "      <th>Mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yr_Mo_Dy</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1961-01-01</th>\n",
+       "      <td>18.50</td>\n",
+       "      <td>9.29</td>\n",
+       "      <td>13.018182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-02</th>\n",
+       "      <td>17.54</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>11.336364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-03</th>\n",
+       "      <td>18.50</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>11.641818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-04</th>\n",
+       "      <td>11.75</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>6.619167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-05</th>\n",
+       "      <td>13.33</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>10.630000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Max   Min       Mean\n",
+       "Yr_Mo_Dy                          \n",
+       "1961-01-01  18.50  9.29  13.018182\n",
+       "1961-01-02  17.54  6.50  11.336364\n",
+       "1961-01-03  18.50  6.17  11.641818\n",
+       "1961-01-04  11.75  1.79   6.619167\n",
+       "1961-01-05  13.33  6.17  10.630000"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data.groupby('Yr_Mo_Dy', axis=0, squeeze=True).mean() not quite doing what I want\n",
+    "\n",
+    "day_stats = pd.DataFrame()\n",
+    "\n",
+    "day_stats['Max'] = data.max(axis = 1)\n",
+    "day_stats['Min'] = data.min(axis = 1)\n",
+    "day_stats['Mean'] = data.mean(axis = 1)\n",
+    "\n",
+    "\n",
+    "day_stats[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1406,12 +1733,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150 µs ± 3.11 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "1.92 ms ± 48.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The provided solution\n",
+    "data['date'] = data.index\n",
+    "\n",
+    "data['Month'] = data['date'].apply(lambda date: date.month)\n",
+    "\n",
+    "%timeit jan = data['Month'] == 1\n",
+    "\n",
+    "%timeit jan_wind = data.query('Month == 1')\n",
+    "# Why they use query method?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RPT      14.847325\n",
+       "VAL      12.914560\n",
+       "ROS      13.299624\n",
+       "KIL       7.199498\n",
+       "SHA      11.667734\n",
+       "BIR       8.054839\n",
+       "DUB      11.819355\n",
+       "CLA       9.512047\n",
+       "MUL       9.543208\n",
+       "CLO      10.053566\n",
+       "BEL      14.550520\n",
+       "MAL      18.028763\n",
+       "Month     1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jan_wind # It does stick it in a dataframe which is kinda useful\n",
+    "\n",
+    "jan\n",
+    "data[jan]\n",
+    "\n",
+    "# But if this is what you want you could just do this\n",
+    "data[data['Month'] == 1]\n",
+    "\n",
+    "data[jan].mean()\n",
+    "\n",
+    "\n",
+    "# But it doesn't address the year part..."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# jan_years = data.all(data.index.month & (data.index.year > 1960 and data.index.year < 1963))\n",
+    "\n",
+    "criteria = [data.index.month == 1, [data.index.year > 1960 and data.index.year < 1963]]\n",
+    "\n",
+    "# jan_years\n",
+    "\n",
+    "type(criteria)\n",
+    "criteria[0]\n",
+    "\n",
+    "# Struggled with the multiple element criteria in a single array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RPT      14.847325\n",
+       "VAL      12.914560\n",
+       "ROS      13.299624\n",
+       "KIL       7.199498\n",
+       "SHA      11.667734\n",
+       "BIR       8.054839\n",
+       "DUB      11.819355\n",
+       "CLA       9.512047\n",
+       "MUL       9.543208\n",
+       "CLO      10.053566\n",
+       "BEL      14.550520\n",
+       "MAL      18.028763\n",
+       "Month     1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Regardless this would have been much faster\n",
+    "\n",
+    "data[data.index.month == 1].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1427,7 +1870,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data.resample()"
+   ]
   },
   {
    "cell_type": "markdown",
