07 Viz Tips Titanic

--- a/pandas_exercises-master/07_Visualization/Titanic_Desaster/Exercises.ipynb
+++ b/pandas_exercises-master/07_Visualization/Titanic_Desaster/Exercises.ipynb
@@ -22,12 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "%matplotlib inline"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,12 +48,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "csv = 'train.csv'\n",
+    "\n",
+    "titanic_df = pd.read_csv(csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      "PassengerId    891 non-null int64\n",
+      "Survived       891 non-null int64\n",
+      "Pclass         891 non-null int64\n",
+      "Name           891 non-null object\n",
+      "Sex            891 non-null object\n",
+      "Age            714 non-null float64\n",
+      "SibSp          891 non-null int64\n",
+      "Parch          891 non-null int64\n",
+      "Ticket         891 non-null object\n",
+      "Fare           891 non-null float64\n",
+      "Cabin          204 non-null object\n",
+      "Embarked       889 non-null object\n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic_df.info()\n",
+    "titanic_df[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,12 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "titanic_df.set_index('PassengerId', inplace=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,12 +258,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([<matplotlib.patches.Wedge at 0x224016e2198>,\n",
+       "  <matplotlib.patches.Wedge at 0x224016e2668>],\n",
+       " [Text(-0.491945,0.983865,'Male'), Text(0.491946,-0.983865,'Female')])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWQAAADuCAYAAAAOR30qAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGERJREFUeJzt3XmYHFW9xvHv6ZnphgAZAgQENJQg\ni4osGpeAYFBEro0giihXvSwKCrIKuRSbtILYsigCAsp2ERRQEQRLZA0khCWELaxhkTaAgUSWlkDW\nmXP/qI4Zhmwz092/Wt7P89Qz0z3d0+8w5O0zp6pOOe89IiJir2AdQEREYipkEZGEUCGLiCSECllE\nJCFUyCIiCaFCFhFJCBWyiEhCqJBFRBJChSwikhAqZBGRhFAhi4gkhApZRCQhVMgiIgmhQhYRSQgV\nsohIQqiQRUQSQoUsIpIQKmQRkYRQIYuIJIQKWUQkIVTIIiIJoUIWEUkIFbKISEKokEVEEkKFLCKS\nECpkEZGEUCGLiCSECllEJCFUyG3gnPPOucv63O50zs1yzv1lOc8bu7zHiEh2qJDb401gc+fcyo3b\nnwVeNMwjIgnUaR0gR24AysAfgb2AK4DtAJxzHwPOBFYG5gD7eu+n9X2yc24V4GzgQ8S/t4r3/s9t\nS28gCKMCsBowvLH1/Xw4sErjoQv7bT19Pp9H/Ib4jq1WLc9p188isiJUyO1zJfCDxhTEFsDFNAoZ\neBLY3nu/0Dm3I3AK8OV+zz8OuM17v59zbnVgsnPuFu/9m23KP2RBGK0LvA/YCHgvsCbvLNm+t4cB\nroV5eoHZwAzg+aVttWr5jVZlEOlLhdwm3vupzrmAeHT8135f7gYudc5tDHigawnfYidgV+fcUY3b\nKwGjgCdaEngQgjDqJM60qHQ36vP5hsQFmyQFFpf/pkt7UBBGdZZe2C8A02vV8tyWp5XMUyG313XA\n6cBY4tHhIicB4733uzdK+/YlPNcBX+4/lWEhCKMA2JJ3lu4GZPP/qe7GtvlSvt4ThNETwP19tgc1\nJSIDlcV/PEl2MVD33j/inBvb5/5uFu/k22cpz70ROMQ5d4j33jvntvbeP9i6qLEgjIrAh4FtGtsY\nYL1Wv27KdBCX9ebA3o37+pf0FOAhlbQsi/PeW2fIPOfcbO/9qv3uGwsc5b3fxTk3BrgUmAXcBnzT\nex/0e8zKxDv+tiEeLde897s0O2sQRiMbr7Ft4+NHiKdHZOh6iKeYprC4qFXS8h8q5BxrHMXwQRaP\nfrchnn6Q9ukBHgNuJj4SZ2KtWp5vG0msqJBzJgijTYDdgM8AnyCeLpHkmA3cSlzON9Sq5enGeaSN\nVMgZ1xgFjwF2JS7ipR5NIIn0GI1yJh49LzDOIy2kQs6gIIxWIj5MbjdgF2Bt20TSJG8Qj56vB/5U\nq5ZfN84jTaZCzohGCe8MfAX4AvEJFpJd84G/EZ/xeV2tWn7LOI80gQo55YIw2gbYF9iT+AQHyZ83\niUfNVwB/007B9FIhp1AQRusB/0N8zLLmhKWv14iL+YJatfyQdRgZGBVySjRO0NiNeDS8E/HJCCLL\n8gDwa+C3tWp5tnUYWT4VcsI1TtQ4sLG9yziOpNMbwOXAebVq+RHrMLJ0KuSECsJoS+Bw4sWISsZx\nJDtuB06tVcs3WAeRd1IhJ0jjmOFdgcOIFyASaZVHgNOAK2rV8kLrMBJTISdAo4i/CpwAvN84juTL\ndOI1Ui7QPLM9FbKhRhF/DTgeFbHYeg34OfBzFbMdFbKBRhHvRVzEmxnHEelrFvEVa86rVcvzrMPk\njQq5zYIw2g2ooiKWZJsO/BC4tFYt91iHyQsVcps0jpr4GfBp6ywiA/AkcHytWr7aOkgeqJBbLAij\ndYCTgf2Ir+EmkkbjgYNr1fLj1kGyTIXcIkEYlYAjgGPRQj+SDQuBs4CKrsTdGirkFgjCaDvgArTO\nhGTTDOCoWrX8O+sgWaNCbqIgjIYDPwW+Q3zdO5EsuwM4oFYtP2UdJCtUyE0ShNEXgHOBd1tnEWmj\nOcAxwFm1alllMkQq5CEKwmgt4BziM+1E8mo8sF+tWq5ZB0kz7fUfgiCMPgNMRWUssgMwNQij/a2D\npJlGyIMQhFEn8UHzIXpTE+nvBmDvWrU8yzpI2qiQBygIow2Ir8gwxjqLSIK9AHylVi3fYx0kTTS6\nG4AgjL4MPITKWGR53g1MCMLoUOsgaaIR8gpoLAZ0CnC0dRaRFLoK+LZWkVs+FfJyBGG0KvHlb3az\nziKSYk8Au9eq5WnWQZJMhbwMQRiNIr68+hbWWUQy4DVg11q1fKd1kKTSHPJSBGG0DXAfKmORZhkB\n3BKE0VesgySVCnkJgjDaE7gNWNs6i0jGlICrgjD6vnWQJNKURT9BGB0AnIferERa7SzgiFq13Gsd\nJClUyH0EYTQOONU6h0iOXAF8U1cliWkU2BCE0Q9QGYu0217Ab4Iw6rAOkgQaIQNBGJ0MHGedQyTH\nLic+3TrX0xe5HyEHYXQMKmMRa98ALmmchJVbuR4hB2H0LeBC6xwi8h+XAvvmdW3l3L4bBWH0ReBX\n1jlE5G32Bk6zDmEllyPkIIy2B24EVrLOIiJLdGitWj7bOkS75a6QgzDaHLgT6LbOIiJL1Uu89sV1\n1kHaKVeFHITR6sAUYCPrLCKyXLOBbWvV8lTrIO2SmznkIIwc8aE1KmORdFgVuD4Io5HWQdolN4UM\nnACUrUOIyICMIj5xxFkHaYdcFHIQRv8FnGidQ0QGZWfgSOsQ7ZD5OeTGmsYPES/9JyLptIB4Pvk+\n6yCtlIcR8kWojEXSrgu4Mgij4dZBWinThdxYSnNH6xwi0hQbAudbh2ilzE5ZNKYqHgVWs84iIk21\nS61ajqxDtEKWR8gXojIWyaJzgjBa2TpEK2SykIMw2g/4rHUOEWmJAPiBdYhWyNyURRBGqwHPoOvh\niWTZAmCrWrX8uHWQZsriCPloVMYiWddFfO3LTMnUCDkIo/WBp4FMzi+JyDvsWquWr7cO0SxZGyGf\nhMpYJE8q1gGaKTMj5CCMPkR8Rl7W3mREZNl2r1XL11qHaIYsldexZOvnEZEVU8nK4kOZKLAgjN4D\n7GGdQ0RMbAl8yTpEM2SikIFDgE7rECJiZpx1gGZI/RxyEEarAs8Dq1tnERFTW9Wq5YetQwxFFkbI\n+6EyFhH4jnWAocpCIaf+lyAiTfH1IIxWsQ4xFKku5Mahbh+wziEiiTAc+Jp1iKFIdSEDe1oHEJFE\n2dc6wFCkvZC/ah1ARBJlTBBGa1mHGKzUFnIQRlsDG1vnEJFEKQCftw4xWKktZHQiiIgs2S7WAQYr\nzYW8g3UAEUmknYIw6rIOMRipLOTG5VtGW+cQkUTqBj5pHWIwUlnIwCeIF6gWEVmSba0DDEZaC3k7\n6wAikmgfsQ4wGCpkEcmiD1sHGIy0FnIq/2OLSNuMSuPxyKkr5CCMRgJrWOcQkcRL3cAtdYUMbGod\nQERSYXPrAAOVxkLe0DqAiKTCetYBBiqNhRxYBxCRVFjXOsBApbGQ320dQERSQYXcBsOtA4hIKqiQ\n2yDVVwQQkbZRIbfBMOsAIpIKqRu8qZBFJKs6rQMMVOoCo0KWfoYzu35w57UPF/DWUSRhDjr2nsK5\np5zUa51jRaWxkEX+YwP30gs3FY+eV3ILtrfOIglUuTI1ZQzpnLKoWweQZPi4e/zx24pHlkpuwUbW\nWSSRFloHGCgVsqTSXh233ntl8eSgw/mR1lkkseZbBxioNE5ZqJBz7qTOi+/4Rsct2zmXygGFtM/L\n1gEGSoUsqeHo7b2yePLEjxee/JR1FkmFF6wDDFQaC/k16wDSfsOY++bNpXGPre9eURnLinrROsBA\npbGQn7UOIO21Dq/OvK101CuruLkfs84iqZK6EXIa5+CmWQeQ9vmge+6ZSaVDF6zi5r7fOoukTupG\nyGks5CetA0h77Fy494G/FI8b2el617fOIqn0vHWAgUpdIdeq5VeBWdY5pLUO67j6zvO6fvEh5+i2\nziKp9YB1gIFK4xwyxKNkHX+aUed3/eyOnTumaOedDMUsKvXnrEMMVOpGyA33WweQ5uti4fybiuMm\nqYylCe61DjAYaS3k8dYBpLm6mf365NJBT2xSeHFb6yySCfdYBxiMtBbyHUCPdQhpjve6f06fXDro\n1RFu9pbWWSQzNEJul1q1XAcetM4hQ7dt4dFHby2OG1ZyC3U1cWmWHuA+6xCDkcpCbtC0Rcp9o+Pm\ney7vOmWjgvNrWWeRTLmdSj2VSyykuZBvtg4gg3dK54V3nNR5ycecY2XrLJI5V1sHGKy0HvYG8Qh5\nJrC2dRBZcQV6e35f/NGk0YWndCSFtEIvcI11iMFK7Qi5Vi0vBK6yziErbhhz35xUOvSB0YWndHUP\naZW7qNRfsg4xWKkt5IbfWgeQFbMur7w0pXTg8+u6Vz9qnUUyLbXTFZDyQq5Vy/cCz1jnkGXbwj37\n9MTSYb3D3LzNrLNIpvUAf7QOMRSpLuQGjZITrFy45/4/F09Yp9P1rmedRTLvWir11C252VcWCvkC\nUnjtrDw4svP3E8/pOmtL5xhunUVy4UzrAEPlvPfWGYYsCKNLgH2sc8gi3l/YdcaEHTse0JEU0i5T\nqNRTv38iCyNkgNOA9L+zZECRBfNuLR51t8pY2uwX1gGaIROFXKuWHwci6xx5tzpvvDa5dNC0jQoz\ntrHOIrkyg4wcApuJQm441TpAnm3o/vmPyaXvvb66e3ML6yySO2dQqS+wDtEMmSnkWrU8EbjNOkce\nfbLwyCO3FMetWnQL32udRXLnOeAc6xDNkplCbjiC+NRJaZO9O/5292VdP9m44Pya1lkkl46lUp9n\nHaJZMnGURV9BGP0a2N86Rx78tPPXd+zZcfv2zuGss0gu3Uul/gnrEM2UtREywPHAv61DZFmB3p5r\niidM+Grn7Z9SGYuho6wDNFvmCrlWLc8EfmydI6tWYc7su0qHPLh14VktECSWrqFSv9M6RLNlrpAb\nzgSmWYfImvX414z7Sge9+C732mjrLJJrdeBQ6xCtkMlCrlXL84F90Q6+ptnKPTNtYulwhrl5m1pn\nkdw7LO1rVixNJgsZoFYt3w38zDpHFuxWmDTlmuIP1utwvetaZ5Hcu45K/VLrEK2S2UJuOAF41DpE\nmo3rvHLimV2/3Mo5VrPOIrn3CnCAdYhWytxhb/0FYbQFMBkoWWdJF+8v6Tp1wg4dD2tNCkmKr1Kp\n/946RCtlfYRMrVqeChxtnSNNSsyfe1vxyHtUxpIgl2W9jCEHhQxQq5Z/AVxunSMNRvDvVyeXDnpq\nw8JLY6yziDTcT8anKhbJRSE37E/8i5WleJ974R/3lr73Rrd7SwsESVK8DOxOpT7XOkg75KaQa9Xy\nXGB3YKZ1liTavvDw1JuKR69WdD0bWGcRaVgA7EGl/rx1kHbJTSED1Krl54E9iH/R0rBfxw13Xdr1\n000Lzq9hnUWkj0OyeDbesmT+KIslCcLoW8CF1jmS4PSu82//cmGC1qSQpDmfSv1A6xDtlqsR8iK1\navki4H+tc1jqoGfhdcXjJu7RMWGsylgS5k/AwdYhLORyhLxIEEanAMdY52i3VZjzxvjS959a29U/\nYp1FpJ9bgXKW1jgeiFwXMkAQRucCufnTaH1mzbilNO6Nld38TayziPRzN7ATlfps6yBWcjll0c/3\ngN9Zh2iHrd3T0yaUDncqY0mg+4Cd81zGoEKmVi17YG/gt9ZZWumLhTun/Kl44vodzr/LOotIPw8S\nj4xzf2GJ3E9ZLBKEkQPOJh4xZ8oxnb+dcEBHtK1zdFhnEennDmA3KvW6dZAkUCH3E4TRScSXgcoA\n7y/t+umET3VM1ZoUkkRXA1/P6w68JVEhL0EQRocTr6Wc2sPBSsyfe2Px6AeDwstak0KS6DzgYCp1\nXUSiDxXyUgRhtDdwAdBlnWWg1qT+r/GlI2cMd299yDqLyBKcSKX+I+sQSaRCXoYgjD5J/GfV2tZZ\nVtQm7vnnouKxHV2uZ5R1FpF+FgLfo1L/tXWQpFIhL0cQRqOAa4GtrbMszw6FBx++qOu0UQXHCOss\nIv28DOxJpT7BOkiS5f6wt+WpVcvTgU8CV1lnWZb9O6K7Lu46bTOVsSTQ3cCHVcbLpxHyAARhdAxw\nMgl7I/t51y9v/2JhkhYIkiT6JXAElbpWWFwBKuQBCsJoB+AyYH3rLB30LPxz8YS7Ny/UtrPOItLP\nHOA7VOqXWQdJExXyIARhtAbxERhfssqwKm/9e3zpyKdHaoEgSZ7HgP+mUp9qHSRtVMhDEITR/sCZ\nwLB2vu573MwXby6Oe2slt2Djdr6uyHL0AmcAJ+hkj8FRIQ9REEabAlfQpqMwRrtpT1xV/NEaHc6v\n047XE1lBzwJ7U6lPsg6SZonaOZVGtWp5GvBx4tOtW3ohxj067pj8h+IPR6mMJUE8cC6wpcp46DRC\nbqIgjDYGfgXs0OzvfXzn5RO+1fFXLRAkSTId+DaV+s3WQbJChdwCQRjtA5wOrDnU7+Xo7b286ycT\nt+14TAsESVLMA04DfkKl/pZ1mCxRIbdIEEZrES9Q9M3Bfo+VmDfnpuLRD48qzPxE85KJDMlfgMOp\n1J+1DpJFKuQWC8JoDPFoeZuBPG8tXp81vnTkzNXcnA+2JpnIgDxDXMSRdZAsUyG3SRBGewBVYKPl\nPXYzN/3v1xeP6+pyPe9pfTKRZXoT+Alwug5laz0VchsFYVQkviLJ8cAaS3rMZwr3P3RB1xlBwbF6\nW8OJvN1c4qMnqlTqs6zD5IUK2UAQRiOAY4jL+T8nlXy347pJR3de+VHnKJqFk7ybD1wEnEyl/k/r\nMHmjQjYUhNFI4CjgoLO6zr5/1467dSSFWOkBfgP8iEq9Zpwlt1TICXDW8fuseWjnNUcQj5g1VSHt\nNJ/4TNMfU6k/bR0m71TISVLpHg4cCBwB6Gw8aaVXiU9iOkdTE8mhQk6iSncJ2JN4xPxx4zSSLU8T\nL4j1fzqpI3lUyElX6R5NXMxfA1YyTiPpNYH4RKXrdaXn5FIhp0Wle03gW8RTGoFtGEmJmcQ76i6m\nUn/COowsnwo5bSrdBeBzxKdk70ab12KWxFsI3ABcDPyFSn2hcR4ZABVymlW6VyW+ask3gE+DVoLL\nsWnEJfwbKvWXrMPI4KiQs6LSvS6wF3E5t2WxfDH3d+APwB+o1O+3DiNDp0LOokr3psCujW0MGjln\nyTTgGuBqKvUp1mGkuVTIWRfvDPw8cTl/DljNNpAMUA8wGbgeuIZK/UnjPNJCKuQ8qXQXgU8BXwA+\nC2xmG0iW4mng5sY2nkq9bpxH2kSFnGeV7nWAscQlPRZ4v2WcHHsVuJVFJay1JHJLhSyLxQW9qJy3\nIy5ozT83Vy/wOHBPn+2JZp6s4ZzrAR7pc9cXvfe1Zn3/fq+1DzDae39wK75/3qiQZekq3cOArYCP\nAKMbHzdDJT0QM4nngBeV72Qq9Tda+YLOudne+1Vb+Rp9XmsfVMhN02kdQBIsXuvgrsbWuO9tJb0l\nsGljG2mQMEleBx7rsz0KPEal/rJpqgbnXAfxFWvGAiXgl977XznnxgI/BF4m/r3+iXh0fRiwMvHo\n+lnn3BeIL6xQBF4Bvu69f7nfa4wEzgdGNe463Hs/qcU/WqZohCzNUekeQVzMm7C4pDcB3kf8DzsL\n6sA/gFrj43PE0w+PUam/YJjrbfpNWTznvd/dOXcAsLb3/mTnXAmYBHwF2AC4lnh66lXiY5sv9N6f\n6Jw7DHiv9/5w59wI4HXvvXfOfRt4v/f+yL4jZOfc74Bzvfd3OudGATd677VfYgA0QpbmqNRfY/Gf\n5f2+1j0CWB9Yr/Fx/X631yW+pJXV4kn/Bv5FPPJb9HEmMJ3F5VujUn/dKN9AzfHeb9Xvvp2ALZxz\nezRudwMbE6+HfJ/3fgaAc+5Z4KbGYx4Bdmh8/m7gKufcusSj5OeW8Lo7Ah9wzi26Pdw5t5r3vqVT\nNFmiQpbWi8v6NeI/45fxuO6VgBHEi/SvTnzMdN+tSDx/3bmUjx3EO83m9tnm9Ls9F5hN3/Kt1Bc0\n60dNMAcc4r2/8W13xlMWfS9e2tvndi+LO+Js4Gfe++saz6ks4TUKwBjv/Zzmxc4XFbIkR6U+F5jR\n2KS5bgQOdM7d5r1f4JzbBHhxAM/v7vP4vZfymJuAg4HTAJxzW3nvHxps4DwqWAcQkba4kHi++wHn\n3KPEVwsZyICsAvzBOTeR+C+LJTkUGO2cm+qcexz47hDy5pJ26omIJIRGyCIiCaFCFhFJCBWyiEhC\nqJBFRBJChSwikhAqZBGRhFAhi4gkhApZRCQhVMgiIgmhQhYRSQgVsohIQqiQRUQSQoUsIpIQKmQR\nkYRQIYuIJIQKWUQkIVTIIiIJoUIWEUkIFbKISEKokEVEEkKFLCKSECpkEZGEUCGLiCSECllEJCFU\nyCIiCaFCFhFJCBWyiEhCqJBFRBJChSwikhD/D7EasCubXHRCAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2240138aa20>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "male = titanic_df['Sex'] == 'male'\n",
+    "female = titanic_df['Sex'] == 'female'\n",
+    "\n",
+    "len(titanic_df) # 891\n",
+    "male.sum() # 577\n",
+    "female.sum() #314\n",
+    "\n",
+    "plt.pie([male.sum(), female.sum()], labels=['Male', 'Female'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,9 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -110,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -126,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -151,23 +356,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
